Review Comments Fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,100 +1,3 @@
-<div class="spacex-heading"><strong> SpaceX Launch Programs</strong></div>
-<div class="spacex-filters" fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center" fxLayout.lt-sm="column">
-  <ng-container>
-    <mat-card class="mat-card-inline" fxFlex.lt-sm="100%">
-
-      <mat-card-content class="card-content">
-        <strong>Filters</strong>
-        <div class="filter-heading">
-          Launch Year
-          <hr>
-          <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start">
-            <div class="btn-group" data-toggle="buttons" *ngFor="let year of launchYearsList"
-              fxFlex="0 1 calc(50% - 20px)">
-              <label fxFlex="0 1 calc(50% - 20px)" [ngClass]="{'active': year.checkedStatus}"
-                class="btn btn-primary form-check-label">
-                <input type="checkbox" (change)="filterMissions('launch_year', year, $event)" autocomplete="off"
-                  class="form-check-input" [checked]="year.checkedStatus">
-                {{year.year}}
-              </label>
-            </div>
-          </div>
-          Successful Launch
-          <hr>
-          <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start">
-            <div class="btn-group" data-toggle="buttons" fxFlex="0 1 calc(50% - 20px)">
-              <label fxFlex="0 1 calc(50% - 20px)" [ngClass]="{'active': selectedFilters['launch_success']}"
-                class="btn btn-primary form-check-label">
-                <input type="radio" (change)="filterMissions('launch_success', true, $event)" autocomplete="off"
-                  class="form-check-input" [checked]="selectedFilters['launch_success']">
-                True
-              </label>
-            </div>
-            <div class="btn-group" data-toggle="buttons" fxFlex="0 1 calc(50% - 20px)">
-              <label fxFlex="0 1 calc(50% - 20px)" [ngClass]="{'active': selectedFilters['launch_success'] === false}"
-                class="btn btn-primary form-check-label">
-                <input type="radio" (change)="filterMissions('launch_success', false, $event)" autocomplete="off"
-                  class="form-check-input" [checked]="selectedFilters['launch_success'] === false">
-                False
-              </label>
-            </div>
-          </div>
-          Successful Landing
-          <hr>
-          <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start">
-            <div class="btn-group" data-toggle="buttons" fxFlex="0 1 calc(50% - 20px)">
-              <label fxFlex="0 1 calc(50% - 20px)" [ngClass]="{'active': selectedFilters['land_success']}"
-                class="btn btn-primary form-check-label">
-                <input type="radio" (change)="filterMissions('land_success', true, $event)" autocomplete="off"
-                  class="form-check-input" [checked]="selectedFilters['land_success']">
-                True
-              </label>
-            </div>
-            <div class="btn-group" data-toggle="buttons" fxFlex="0 1 calc(50% - 20px)">
-              <label fxFlex="0 1 calc(50% - 20px)" [ngClass]="{'active': selectedFilters['land_success'] === false}"
-                class="btn btn-primary form-check-label">
-                <input type="radio" (change)="filterMissions('land_success', false, $event)" autocomplete="off"
-                  class="form-check-input" [checked]="selectedFilters['land_success'] === false">
-                False
-              </label>
-            </div>
-          </div>
-        </div>
-      </mat-card-content>
-
-    </mat-card>
-  </ng-container>
-</div>
-<div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center" fxLayout.lt-sm="column">
-
-  <ng-container *ngFor="let mission of obsMissionData | async">
-    <mat-card class="mat-card-inline" fxFlex="0 1 calc(25% - 20px)" fxFlex.lt-sm="100%"
-      fxFlex.lt-md="0 1 calc(50% - 20px)">
-
-      <img fxLayout="row" fxLayoutAlign="center" class="spacex-card-image" [src]="mission.links.mission_patch" [alt]="">
-      <mat-card-content class="card-content">
-        <div class="card-content-value content-heading">{{ mission?.mission_name }} #{{ mission?.flight_number}}</div>
-        <div><strong>Mission Id's: </strong>
-          <ul>
-            <li *ngFor="let missionId of mission.mission_id">
-              <span class="card-content-value">{{ missionId }}</span>
-            </li>
-          </ul>
-        </div>
-        <div><strong>Launch Year: </strong><span class="card-content-value">{{mission?.launch_year }}</span></div>
-        <div><strong>Successful Launch: </strong><span class="card-content-value">{{ mission?.launch_success }}</span>
-        </div>
-        <div><strong>Successful Landing: </strong><span class="card-content-value">{{ misson?.launch_landing}}</span>
-        </div>
-      </mat-card-content>
-
-    </mat-card>
-  </ng-container>
-</div>
-<div class="spacex-developer">
-  <strong>Developed by: </strong>   Abhinav Syal
-</div>
-<ng-container *ngIf="missionData.length">
-  <mat-paginator [pageSize]="8" [pageSizeOptions]="[5, 10, 25, 100]" class="spacex-pagination">
-  </mat-paginator>
-</ng-container>
+<app-header></app-header>
+<app-filters></app-filters>
+<app-missions></app-missions>
